Issue #26911719: fix gap between numbers and edge of screen

--- a/public/style.css
+++ b/public/style.css
@@ -194,8 +194,8 @@ h1 {
   right: 0;
   bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 110%;
+  height: 110%;
   z-index: -1;
 }
 
